--- a/ajax_crud.html
+++ b/ajax_crud.html
@@ -19,7 +19,7 @@
     
       
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> 
-    <!-- <link rel="stylesheet" href="css/ajax_crud.css"> -->
+     <link rel="stylesheet" href="css/ajax_crud.css"> 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
    
@@ -163,7 +163,7 @@
         </table>
     </div>
 
-    <footer class="bg-dark text-light text-center pt-3">
+    <footer class="bg-dark text-light text-center pt-3 footer">
         <p>&copy; 2022 companies Ltd.</p>
         <p>
             <i class="fa-brands fa-facebook"></i>
