edit : sends the id and name in ajax requests.

--- a/ajax_crud.html
+++ b/ajax_crud.html
@@ -10,9 +10,8 @@
   
   <!-- Bootstrap CSS -->
   <!-- <link href="css/bootstrap.min.css" rel="stylesheet">  -->
-  
-    <!-- Bootstrap Bundle with Popper -->
-    <!-- <script src="js/bootstrap.bundle.min.js"></script> -->
+  <!-- Bootstrap Bundle with Popper -->
+  <!-- <script src="js/bootstrap.bundle.min.js"></script> -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -139,7 +138,7 @@
     <div class=" container-fluid mt-3">
         <!-- Trigger the modal with a button -->
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#companyModalEdit">Edit</button>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#companyModalSave">Save</button>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#companyModalSave">Add</button>
         <button type="button" class="btn btn-danger " data-bs-toggle="modal" data-bs-target="#companyModalDelete">Delete</button>
        
 
